@@ -85,4 +85,5 @@ BUGFIXES FROM BUGZILLA:
 074 ==> 381432 - Olympus ORF files to DNG conversion fails in Windows 10.
 075 ==> 385471 - Geolocation Editor Opens Map To A Random Location.
 076 ==> 387000 - GPS Longitude Decimalisation Appears Incorrect In Map.
-077 ==> 
+077 ==> 386785 - Change needed for separator in ignore list (currently blank space).
+078 ==> 
